# Rational-Numbers

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  exact_double.h  mini-gmp.c  mini-gmp.h  mini-mpq.c  mini-mpq.h
